--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <div class="d-sm-flex align-items-center justify-content-between mb-4">
             <h1 style="margin-top:1em;"class="h2 mb-0 text-gray-800">신종 코로나 바이러스 맵<br>
               <span class="h5">* <a href="http://www.cdc.go.kr/linkCheck.es?mid=a21111050500" target="_blank">질병관리본부</a>의 DATA 근거, 일일업데이트, 2/2일 11:00 최종 업데이트</span><br>
-              <span class="h5">* 동시 접속자가 너무 많아 서버가 간헐적으로 뻗고 있습니다. 죄송합니다.</span><br>
+              <span class="h5">* 현재 사이트의 접속 증가로 원활한 접속에 문제가 발생하고 있으며 해결중에 있습니다. 감사합니다.</span><br>
               <span class="h5">* 질병관리본부 홈페이지 게시글 외에 업데이트는 <a href="http://news.kbs.co.kr/common/main.html" target="_blank">KBS</a> 뉴스 게시판만 참고하고 있습니다.</span><br>
               <span class="h5">* GDG(google developers group) 등 자발적으로 참여해주신 분들께서 팀을 꾸려 비용을 받지 않고 업데이트 중에 있습니다. <a target="_blank" href="https://www.notion.so/5a68695448fc4724b8e1e070e919508d">&#8690;</a></span><br>
             </h1>
