--- a/index.html
+++ b/index.html
@@ -312,7 +312,8 @@
               <div class="card shadow mb-4">
                 <!-- Card Header - Dropdown -->
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                  <h6 class="m-0 font-weight-bold text-danger">국내현황(데스크탑에 최적화, 휴대폰 이용시 오른쪽으로 이동 가능)</h6>
+                  <h6 class="m-0 font-weight-bold text-danger">KBS 신종 코로나바이러스 감염증
+확산 관계망</h6>
                   <div class="dropdown no-arrow">
                     <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
@@ -325,6 +326,7 @@
                 </div>
                 <!-- Card Body -->
                 <div class="card-body">
+                  <iframe src="http://dj.kbs.co.kr/resources/2020-01-31/" width="100%" height="600rem"></iframe>
                     <div class="table-responsive">
                     <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                       <thead>
