google map notice

--- a/index.html
+++ b/index.html
@@ -243,6 +243,7 @@
                 <!-- Card Body -->
                 <div class="card-body">
                   <div class="chart-area">
+                    <p>접속자수가 많아 서비스가 원활하지 않습니다. 죄송합니다.</p>
                     <div id="map"></div>
                   </div>
                 </div>
