--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                     </a>
                     <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink">
                       <div class="dropdown-header">상세</div>
-                      <a class="dropdown-item" href="http://www.cdc.go.kr/contents.es?mid=a21111060000">상세내용</a>
+                      <a class="dropdown-item" href="http://dj.kbs.co.kr/resources/2020-01-31/">상세내용</a>
                     </div>
                   </div>
                 </div>
