--- a/index.html
+++ b/index.html
@@ -331,98 +331,279 @@
                     <div class="table-responsive">
                     <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                       <thead>
-                      <tr>
-                        <th>국적</th>
-                        <th>성별</th>
-                        <th>나이</th>
-                        <th>입국, 확진</th>
-                        <th>접촉자(명)</th>
-                        <th>이동 경로</th>
-                        <th>치료 병원</th>
-                      </tr>
-                      </thead>
-                      <tbody>
-                      <tr>
-                        <td>중국</td>
-                        <td>여</td>
-                        <td>35</td>
-                        <td>19일, 20일</td>
-                        <td>44</td>
-                        <td>19일 공항 격리</td>
-                        <td>인천의료원</td>
-                      </tr>
-                      <tr>
-                        <td>한국</td>
-                        <td>남</td>
-                        <td>55</td>
-                        <td>22일, 24일</td>
-                        <td>69</td>
-                        <td>22일 공항에서 자택으로<br>
-                          23일 보건소 선별 진료</td>
-                        <td>서울 국립중앙의료원</td>
-                      </tr>
-                      <tr>
-                        <td>한국</td>
-                        <td>남</td>
-                        <td>54</td>
-                        <td>20일, 26일</td>
-                        <td>74</td>
-                        <td>
-                          22일 강남<br>
-                          23일 한강, 역삼, 대치<br>
-                          24일 강남, 일산<br>
-                          25일 자택, 명지병원
-                        </td>
-                        <td>경기 명지병원</td>
-                      </tr>
-                      <tr>
-                        <td>한국</td>
-                        <td>남</td>
-                        <td>55</td>
-                        <td>20일, 27일</td>
-                        <td>172</td>
-                        <td>
-                          20일 공항, 평택 송탄터미널, 자택<br>
-                          21일 평택 365 연합의원<br>
-                          22일~24일 자택<br>
-                          25일 평택 365 연합의원<br>
-                          26일 보건소 선별진료
-                        </td>
-                        <td>분당 서울대병원</td>
-                      </tr>
-                      <tr>
-                        <td>한국</td>
-                        <td>남</td>
-                        <td>32</td>
-                        <td>-, 30일</td>
-                        <td>파악중</td>
-                        <td>
-                          파악중
-                        </td>
-                        <td>서울의료원</td>
-                      </tr>
-                      <tr>
-                        <td>한국</td>
-                        <td>남</td>
-                        <td>56</td>
-                        <td>-, 30일</td>
-                        <td>파악중</td>
-                        <td>
-                          파악중
-                        </td>
-                        <td>서울대병원</td>
-                      </tr>
-                      <tr>
-                        <td>한국</td>
-                        <td>남</td>
-                        <td>28</td>
-                        <td>-, 30일</td>
-                        <td>파악중</td>
-                        <td>
-                          파악중
-                        </td>
-                        <td>서울의료원</td>
-                      </tr>
+                        <tr>
+                          <th>순서</th>
+                          <th>신원</th>
+                          <th>입국일자, 확진일자</th>
+                          <th>감염차수</th>
+                          <th>접촉자(명)</th>
+                          <th>이동 경로</th>
+                          <th>치료 장소</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                          <td>1</td>
+                          <td>중국 35세 여성</td>
+                          <td>19일, 20일</td>
+                          <td>1차 감염</td>
+                          <td>44</td>
+                          <td>중국 후베이성 우한시에 거주하는 중국 국적 여성<br>
+                            19일 입국. 인천공항에서 격리<br>
+                            인천 동구 인천의료원에서 치료
+                          </td>
+                          <td>인천의료원</td>
+                        </tr>
+                        <tr>
+                          <td>2</td>
+                          <td>한국 55세 남성</td>
+                          <td>55</td>
+                          <td>22일, 24일</td>
+                          <td>69</td>
+                          <td>22일 저녁 김포공항 귀국(우한 출발 상하이 경유)<br>
+                              검역에서 발열 확인. 능동적 감시대상자로 분류<br>
+                              김포공항에서 택시로 자택 이동<br>
+                              이후 자택에만 있었음<br>
+                              23일 보건진료소에서 진료후 감염 확진자로 확인
+                          </td>
+                          <td>서울 국립중앙의료원</td>
+                        </tr>
+                        <tr>
+                          <th>3</td>
+                          <td>한국 54세 남성</td>
+                          <td>20일, 26일</td>
+                          <td>1차</td>
+                          <td>98명</td>
+                          <td>
+                            중국 후베이성 우한시 거주<br>
+                            1월 20일 일시 귀국(무증상 입국자)<br>
+                            222일 오후 1시 서울 강남 글로비 성형외과<br>
+                            한일관(압구정로)<br>
+                            본죽(도산대로)<br>
+                            호텔(호텔뉴브)숙박<br>
+                            23일 한강, 역삼, 대치<br>
+                            23일 편의점(GS 한강잠원 1호점)<br>
+                            강남구 역삼동과 대치동 일대 음식점<br>
+                            24일 일산 소재 본죽 (정발산점) <br>
+                            오후 4시 식사동 스타벅스 <br>
+                            저녁 일산 모친 자택, 명지 병원
+                          </td>
+                          <td>일산 명지병원</td>
+                        </tr>
+                        <tr>
+                          <td>4</td>
+                          <td>한국 55세 남성</td>
+                          <td>55</td>
+                          <td>20일, 27일</td>
+                          <td>1차</td>
+                          <td>172명</td>
+                          <td>
+                            20일 우한발 직항편(16:25 KE882)이용 인천공항<br>
+                            공항버스(17:30경 8834번)이용<br>
+                            평택 송탄터미널<br>
+                            택시로 자택이동<br>
+                            21일 평택 365 연합의원<br>
+                            22일 ~ 24일 자택<br>
+                            25일 평택 365 연합의원<br>
+                            26일 보건소 선별진료<br>
+                          </td>
+                          <td>분당 서울대병원</td>
+                        </tr>
+                        <tr>
+                          <td>5</td>
+                          <td>한국 33세 남성</td>
+                          <td>24, 30일</td>
+                          <td>1차</td>
+                          <td>33명</td>
+                          <td>
+                            우한시 업무 차 방문<br>
+                            24일 우한시 인근 장사 공항에서 아시아나 OZ322 타고 귀국<br>
+                            26일 다이소 성신여대역점<br>
+                            11시경 지하철로 성동구 선녀보살(역술인)<br>
+                            지하철 이용 12시경 선호케어(마사지숍)<br>
+                            숙소 인근 이마트24, GS25, 식자재유통센터, 두꺼비마트<br>
+                            27일 오후 돈암동떡볶이, 두꺼비마트, 럭키마트<br>
+                            28일 성북구 예쁠레뷰티라인, 버스 이동<br>
+                            중랑구 가락홈마트,이가네 바지락칼국수<br>
+                            지하철 이용 강남구 와이즈웨딩<br>
+                            지하철로 자택이동<br>
+                            29일 부친 차량 이용 중랑구 보건소 검사 후 자택 귀가<br>
+                            30일 자택에서 서울의료원 이송
+                          </td>
+                          <td>서울의료원</td>
+                        </tr>
+                        <tr>
+                          //순서,신원,입국-확진,감염차수,접촉자수,이동경로,치료장소
+                          <td>6</td>
+                          <td>한국 55세 남성</td>
+                          <td>-, 30일</td>
+                          <td>2차감염</td>
+                          <td>25명</td>
+                          <td>
+                            22일 3번 확진자와 강남 음식점에서 식사
+                            26일 명륜교회 새벽,오전 예배<br>
+                            교회 식당 점심식사,오후 예배<br>
+                            저녁 가족과 종로구 일대 음식점 저녁식사 후 귀가<br>
+                            27∼29일 자택 자가 격리 
+                            30일 자택에서 서울대병원으로 이송
+                          </td>
+                          <td>서울대병원</td>
+                        </tr>
+                        <tr>
+                          <td>7</td>
+                          <td>한국 28세 남성</td>
+                          <td>28</td>
+                          <td>23일, 30일</td>
+                          <td>1차감염</td>
+                          <td>21명</td>
+                          <td>
+                            우한에서 청도 거쳐 23일 인천공항으로 귀국(22:20 청도항공 QW9901편)<br>
+                            26~28일 자택<br>
+                            29일 보건소 구급차량 이용 검사 후 구급차량 귀가<br>
+                            30일 자택에서 서울의료원 이송
+                          </td>
+                          <td>서울의료원</td>
+                        </tr>
+                        <tr>
+                          //순서,신원,입국-확진,감염차수,접촉자수,이동경로,치료장소
+                          <td>8</td>
+                          <td>한국 62세 여성</td>
+                          <td>62</td>
+                          <td>23일, 31일</td>
+                          <td>1차 감염</td>
+                          <td>72명</td>
+                          <td>
+                            우한국제패션센터 한국관(더플레이스) 근무<br>
+                            * 이 장소는 3번째 확진자, 15 확진자와도 관련<br>
+                            7번 확진자(지인)와 23일 같은 비행기(옆좌석)로 입국<br>
+                            23일 우한에서 청도 거쳐(22:20 청도항공 QW9901) 인천 공항으로 귀국<br>
+                            아들 차량 이용 아들의 집으로 이동<br>
+                            25일 서초3동 풍미감자탕점심식사, 아들 차량 이용 자택(군산)으로 이동<br>
+                            군산 소재 음식점 저녁식사 후 귀가<br>
+                            26일 군산 월명동 아센사우나 (14:11~16:29),군산 참치본가<br>
+                            27일 군산 유남진 내과 내원 자차 이용 귀가<br>
+                            28일 군산의료원, 약국, 차량 귀가<br>
+                            29일 군산 문화동 우리떡갈비점심식사, 이마트 군산점<br>
+                            30일 익산 원광대병원 내원, 의사환자로 분류, 입원<br>
+                            31일 입원 중 확진 판정
+                          </td>
+                          <td>원광대병원(익산)</td>
+                        </tr>
+                        <tr>
+                          <td>9</td>
+                          <td>한국 28세 여성</td>
+                          <td>28</td>
+                          <td>-, 31일</td>
+                          <td>2차감염</td>
+                          <td>2명</td>
+                          <td>
+                            30일 5번째 환자 접촉자 통보 받고 자택<br>
+                            31일 서울의료원 이송
+                          </td>
+                          <td>서울의료원</td>
+                        </tr>
+                        <tr>
+                          <td>10</td>
+                          <td>한국 54세 여성</td>
+                          <td>54</td>
+                          <td>-, 31일</td>
+                          <td>3차 감염</td>
+                          <td>2명</td>
+                          <td>
+                            * 6번째 환자 가족(아내)<br>
+                            30일 점심 자차 이용 일산 메종드아이디헤어백석벨라시타점, 자택 귀가<br>
+                            31일 서울대병원 이송<br>
+                          </td>
+                          <td>서울대병원</td>
+                        </tr>
+                        <tr>
+                          //순서,신원,입국-확진,감염차수,접촉자수,이동경로,치료장소
+                          <td>11</td>
+                          <td>남</td>
+                          <td>25</td>
+                          <td>-, 31일</td>
+                          <td>3차</td>
+                          <td>2명</td>
+                          <td>
+                            6번째 환자 가족(아들)<br>
+                            검역(능동감시)<br>
+                            치료중<br>
+                          </td>
+                          <td>서울대병원</td>
+                        </tr>
+                        <tr>
+                          <td>12</td>
+                          <td>중국 48세 남성</td>
+                          <td>48</td>
+                          <td>1/19, 2/1</td>
+                          <td>1차 감염</td>
+                          <td>138명</td>
+                          <td>
+                            19일 일본에서 국내로 귀국했다<br>
+                            20일 택시를 이용 15시 서울 중구 소재 음식점을 방문. 다시 택시를 타고 남대문 쇼핑<br>
+                            19시20분 CGV 부천역점 8층5관 E5~6 영화 '백두산'<br>
+                            21일 지하철과 택시로 12시 인천출입국사무소, 다시 택시로 인천시 남구 친구 집을 방문<br>
+                            22일 9시 부천시 약국 방문, 지하철로 서울역 이동, 편의점 이용, 강릉행 KTX(11:01-12:59)<br>
+                            14시 강릉소재 음식점을 이용, 택시로 16시 강릉 썬크루즈리조트 이동, 17시 커피숍, 18시 음식점, 19시 숙소 복귀<br>
+                            23일 서울역행 KTX(12:30-2:27) KTX로 오후 2시27분 서울역. 지하철로 부천속내과)를 방문<br>
+                            24일 지하철로 수원역, 수원역에서 택시 타고 친척집을 방문. 버스를 타고 경기도 군포 소재 친척집<br>
+                            25일 군포 친척집에서 택시로 군포 더건강한내과 방문. 현대약국, 지하철로 귀가.<br>
+                            26일 CGV부천역점 재방문. 17시30분 '남산의부장들'을 8층 4관 좌석번호 E13~14에서 관람.
+                            27일 지하철과 택시로 서울시 중구 소재 음식점을 방문<br>
+                            28일 14시 부천속내과, 서전약국.<br>
+                            29일엔 종일 집. 30일 10시 부천보건소 선별진료소를 방문,다시 택시를 타고 귀가.<br>
+                            13시 순천향대학교부속부천병원,17시 자가 격리가 시작.
+                            31일엔 종일 집. 2월1일 확진 판정 받고 분당서울대병원으로 이송<br>
+                            *접촉자는 현재까지 138명으로 확인, 이 중 1명이 확진(가족, 14번째 환자)<br>
+                            나머지 접촉자는 자가격리 등 조치 중
+                          </td>
+                          <td>분당 서울대병원</td>
+                        </tr>
+                        <tr>
+                          //순서,신원,입국-확진,감염차수,접촉자수,이동경로,치료장소
+                          <td>13</td>
+                          <td>한국 28세 남성</td>
+                          <td>28</td>
+                          <td>1/31, 2/2</td>
+                          <td>1차감염</td>
+                          <td>확인중</td>
+                          <td>
+                            31일 임시항공편(1차)으로 들어온 귀국한 입국 교민 368명 중 1명<br>
+                            국립중앙의료원에 격리조치<br>
+                            *입국 시 증상을 호소했던 18명을 포함 나머지 1차 입국 교민 367명은 모두 음성<br>
+                            *2월 1일 임시항공편으로 귀국한 2차 입국교민도 전수 진단검사를 진행중<br>
+                            우선 시행된 유증상자 7명의 검사 결과는 모두 음성
+                          </td>
+                          <td>국립중앙의료원</td>
+                        </tr>
+                        <tr>
+                          <td>14</td>
+                          <td>중국 40세 여성</td>
+                          <td>40</td>
+                          <td>-, 2/2</td>
+                          <td>3차감염</td>
+                          <td>확인중</td>
+                          <td>
+                            * 12번째 환자 가족<br>
+                            자가 격리 중이었음<br>
+                            역학 조사 진행 중
+                          </td>
+                          <td>분당 서울대병원</td>
+                        </tr>
+                        <tr>
+                          <td>15</td>
+                          <td>한국 43세 남성</td>
+                          <td>1/20, 2/2</td>
+                          <td>1차 감염</td>
+                          <td>확인중</td>
+                          <td>
+                            20일 입국(16:25 KE882 우한 -> 인천)<br>
+                            *4번 환자와 같은 비행기를 탑승하여 능동 감시 중이던 대상자<br>
+                            1일 증상을 호소해 실시한 검사 결과 확진<br>
+                            *수원시 장안구 거주
+                          </td>
+                          <td>국군수도병원</td>
+                        </tr>
                     </tbody>
                     </table>
                     </div>
