--- a/index.html
+++ b/index.html
@@ -517,15 +517,13 @@
                           <td>서울대병원</td>
                         </tr>
                         <tr>
-                          //순서,신원,입국-확진,감염차수,접촉자수,이동경로,치료장소
                           <td>11</td>
-                          <td>남</td>
-                          <td>25</td>
+                          <td>한국 25세 남성</td>
                           <td>-, 31일</td>
-                          <td>3차</td>
-                          <td>2명</td>
+                          <td>3차감염</td>
+                          <td>확인중</td>
                           <td>
-                            6번째 환자 가족(아들)<br>
+                            * 6번째 환자 가족(아들)<br>
                             검역(능동감시)<br>
                             치료중<br>
                           </td>
