--- a/index.html
+++ b/index.html
@@ -393,9 +393,8 @@
                         <tr>
                           <td>4</td>
                           <td>한국 55세 남성</td>
-                          <td>55</td>
                           <td>20일, 27일</td>
-                          <td>1차</td>
+                          <td>1차감염</td>
                           <td>172명</td>
                           <td>
                             20일 우한발 직항편(16:25 KE882)이용 인천공항<br>
@@ -413,7 +412,7 @@
                           <td>5</td>
                           <td>한국 33세 남성</td>
                           <td>24, 30일</td>
-                          <td>1차</td>
+                          <td>1차감염</td>
                           <td>33명</td>
                           <td>
                             우한시 업무 차 방문<br>
