테이블 수정
질병관리본부 16명

--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
                           <td>중국 35세 여성</td>
                           <td>19일, 20일</td>
                           <td>1차감염</td>
-                          <td>44명</td>
+                          <td>45명</td>
                           <td>중국 후베이성 우한시에 거주하는 중국 국적 여성<br>
                             19일 입국. 인천공항에서 격리<br>
                             인천 동구 인천의료원에서 치료
@@ -475,7 +475,7 @@
                           <td>한국 55세 남성</td>
                           <td>22일, 24일</td>
                           <td>1차감염</td>
-                          <td>69명</td>
+                          <td>75명</td>
                           <td>22일 저녁 김포공항 귀국(우한 출발 상하이 경유)<br>
                               검역에서 발열 확인. 능동적 감시대상자로 분류<br>
                               김포공항에서 택시로 자택 이동<br>
@@ -529,7 +529,7 @@
                           <td>한국 33세 남성</td>
                           <td>24, 30일</td>
                           <td>1차감염</td>
-                          <td>33명</td>
+                          <td>35명</td>
                           <td>
                             우한시 업무 차 방문<br>
                             24일 우한시 인근 장사 공항에서 아시아나 OZ322 타고 귀국<br>
@@ -582,7 +582,7 @@
                           <td>한국 62세 여성</td>
                           <td>23일, 31일</td>
                           <td>1차 감염</td>
-                          <td>72명</td>
+                          <td>76명</td>
                           <td>
                             우한국제패션센터 한국관(더플레이스) 근무<br>
                             * 이 장소는 3번째 확진자, 15 확진자와도 관련<br>
@@ -617,7 +617,7 @@
                           <td>한국 54세 여성</td>
                           <td>-, 31일</td>
                           <td>3차 감염</td>
-                          <td>2명</td>
+                          <td>91명</td>
                           <td>
                             * 6번째 환자 가족(아내)<br>
                             30일 점심 자차 이용 일산 메종드아이디헤어백석벨라시타점, 자택 귀가<br>
@@ -630,7 +630,7 @@
                           <td>한국 25세 남성</td>
                           <td>-, 31일</td>
                           <td>3차감염</td>
-                          <td>확인중</td>
+                          <td>*</td>
                           <td>
                             * 6번째 환자 가족(아들)<br>
                             검역(능동감시)<br>
@@ -685,7 +685,7 @@
                           <td>중국 40세 여성</td>
                           <td>-, 2/2</td>
                           <td>3차감염</td>
-                          <td>확인중</td>
+                          <td>*</td>
                           <td>
                             * 12번째 환자 가족<br>
                             자가 격리 중이었음<br>
@@ -698,7 +698,7 @@
                           <td>한국 43세 남성</td>
                           <td>1/20, 2/2</td>
                           <td>1차 감염</td>
-                          <td>확인중</td>
+                          <td>12</td>
                           <td>
                             20일 입국(16:25 KE882 우한 -> 인천)<br>
                             *4번 환자와 같은 비행기를 탑승하여 능동 감시 중이던 대상자<br>
@@ -706,6 +706,19 @@
                             *수원시 장안구 거주
                           </td>
                           <td>국군수도병원</td>
+                        </tr>
+                        <tr>
+                          <td>16</td>
+                          <td>한국 42세 여성</td>
+                          <td>1/19, 2/4</td>
+                          <td>1차 감염</td>
+                          <td>확인중</td>
+                          <td>
+                            19일 태국에서 입국<br>
+                            25일 저녁 증상 발생, 2일까지 치료받았으나 호전되지 않음<br>
+                            3일 전남대학교 병원에 내원, 격리조치
+                          </td>
+                          <td>전남대병원</td>
                         </tr>
                     </tbody>
                     </table>
