jeju info update

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
               <div class="card shadow mb-12">
                 <!-- Card Header - Dropdown -->
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                  <h6 class="m-0 font-weight-bold text-danger">안전수칙</h6>
+                  <h6 class="m-0 font-weight-bold text-danger">안전수칙 및 제주정보</h6>
                   <div class="dropdown no-arrow">
                     <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
@@ -325,7 +325,24 @@
                     </p>
                   <a href="http://www.cdc.go.kr/contents.es?mid=a21111060000">질병관리본부 안전수칙</a><br>
                   <a href="https://www.cdc.go.kr/linkCheck.es?mid=a21111050600">신종코로나바이러스 선별진료소</a><br>
-                  <a href="https://m.map.kakao.com/actions/searchView?q=%EC%84%A0%EB%B3%84%EC%A7%84%EB%A3%8C%EC%86%8C%20%EC%A0%9C%EC%A3%BC&wxEnc=LVSOTP&wyEnc=QNLTTMN&lvl=4&fbclid=IwAR0GcU5v4DY3GGkgbrDINlXiHccJzGALItiy1-JUqh7CVecjqKMXbjThqJY">신종코로나바이러스 제주지역 선별진료소(카카오맵 연동)</a>
+                  <a href="https://m.map.kakao.com/actions/searchView?q=%EC%84%A0%EB%B3%84%EC%A7%84%EB%A3%8C%EC%86%8C%20%EC%A0%9C%EC%A3%BC&wxEnc=LVSOTP&wyEnc=QNLTTMN&lvl=4&fbclid=IwAR0GcU5v4DY3GGkgbrDINlXiHccJzGALItiy1-JUqh7CVecjqKMXbjThqJY">신종코로나바이러스 제주지역 선별진료소(카카오맵 연동)</a><br><br>
+                  <span class="h5">제주 최신 정보</span>
+                  <img class="img-fluid" src="jeju_info.png" alt="">
+                  <p>유동인구 / 중국인 확진자 이동경로(출처 : 제주도청)</p>
+                  <p>
+                    1. 21일 제주공항 입국 근처<br>
+                    2. 21일 호텔에서 숙박<br>
+                    3. 22일 삼굼부리<br>
+                    4. 22일 우도<br>
+                    5. 22일 성산일출봉<br>
+                    6. 23일 신라면세점<br>
+                    7. 23일 롯데면세점, 쇼핑거리<br>
+                    8. 23일 칠성통 방문<br>
+                    9. 24일 1100고지<br>
+                    10. 24일 도두동 무지개 해안도로 방문<br>
+                    11. 24일 누웨마루 거리<br>
+                    12. 25일 제주공항<br>
+                  </p>
                 </div>
               </div>
             </div>
