--- a/index.html
+++ b/index.html
@@ -368,21 +368,21 @@
                           <th>발견장소</th>
                           <td>멕시코</td>
                           <td>사우디아라비아</td>
-                          <td colspan="2">중국</td>
+                          <td colspan="2" align='center'>중국</td>
                       </tr>
                       <tr>
                           <th>감염매개체</th>
                           <td>사람</td>
                           <td>낙타</td>
-                          <td colspan="2">박쥐</td>
+                          <td colspan="2" align='center'>박쥐</td>
                       </tr>
                       <tr>
                           <th>전파방식</th>
-                          <td colspan="4">비말감염</td>
+                          <td colspan="4" align='center'>비말감염</td>
                       </tr>
                       <tr>
                           <th>주요증상</th>
-                          <td colspan="4">발열 및 호흡기 증상 등</td>
+                          <td colspan="4" align='center'>발열 및 호흡기 증상 등</td>
                       </tr>
                       <tr>
                           <th>치사율</th>
@@ -393,10 +393,10 @@
                       </tr>
                       <tr>
                           <th>기초감염재생산수</th>
-                          <td >1.1~1.7</td>
-                          <td >0.4~0.9</td>
-                          <td >2~5</td>
-                          <td >1.4~2.5</td>
+                          <td>1.1~1.7</td>
+                          <td>0.4~0.9</td>
+                          <td>2~5</td>
+                          <td>1.4~2.5</td>
                       </tr>
                       <tr>
                           <th>감염·사망자</th>
