--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
               <div class="card shadow mb-12">
                 <!-- Card Header - Dropdown -->
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                  <h6 class="m-0 font-weight-bold text-danger">안전수칙</h6>
+                  <h6 class="m-0 font-weight-bold text-danger">안전수칙 및 제주정보</h6>
                   <div class="dropdown no-arrow">
                     <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
@@ -325,7 +325,24 @@
                     </p>
                   <a href="http://www.cdc.go.kr/contents.es?mid=a21111060000">질병관리본부 안전수칙</a><br>
                   <a href="https://www.cdc.go.kr/linkCheck.es?mid=a21111050600">신종코로나바이러스 선별진료소</a><br>
-                  <a href="https://m.map.kakao.com/actions/searchView?q=%EC%84%A0%EB%B3%84%EC%A7%84%EB%A3%8C%EC%86%8C%20%EC%A0%9C%EC%A3%BC&wxEnc=LVSOTP&wyEnc=QNLTTMN&lvl=4&fbclid=IwAR0GcU5v4DY3GGkgbrDINlXiHccJzGALItiy1-JUqh7CVecjqKMXbjThqJY">신종코로나바이러스 제주지역 선별진료소(카카오맵 연동)</a>
+                  <a href="https://m.map.kakao.com/actions/searchView?q=%EC%84%A0%EB%B3%84%EC%A7%84%EB%A3%8C%EC%86%8C%20%EC%A0%9C%EC%A3%BC&wxEnc=LVSOTP&wyEnc=QNLTTMN&lvl=4&fbclid=IwAR0GcU5v4DY3GGkgbrDINlXiHccJzGALItiy1-JUqh7CVecjqKMXbjThqJY">신종코로나바이러스 제주지역 선별진료소(카카오맵 연동)</a><br><br>
+                  <span class="h5">제주 최신 정보</span>
+                  <img class="img-fluid" src="jeju_info.png" alt="">
+                  <p>유동인구 / 중국인 확진자 이동경로(출처 : 제주도청)</p>
+                  <p>
+                    1. 21일 제주공항 입국 근처<br>
+                    2. 21일 호텔에서 숙박<br>
+                    3. 22일 삼굼부리<br>
+                    4. 22일 우도<br>
+                    5. 22일 성산일출봉<br>
+                    6. 23일 신라면세점<br>
+                    7. 23일 롯데면세점, 쇼핑거리<br>
+                    8. 23일 칠성통 방문<br>
+                    9. 24일 1100고지<br>
+                    10. 24일 도두동 무지개 해안도로 방문<br>
+                    11. 24일 누웨마루 거리<br>
+                    12. 25일 제주공항<br>
+                  </p>
                 </div>
               </div>
             </div>
@@ -368,21 +385,21 @@
                           <th>발견장소</th>
                           <td>멕시코</td>
                           <td>사우디아라비아</td>
-                          <td colspan="2" align='center'>중국</td>
+                          <td colspan="2">중국</td>
                       </tr>
                       <tr>
                           <th>감염매개체</th>
                           <td>사람</td>
                           <td>낙타</td>
-                          <td colspan="2" align='center'>박쥐</td>
+                          <td colspan="2">박쥐</td>
                       </tr>
                       <tr>
                           <th>전파방식</th>
-                          <td colspan="4" align='center'>비말감염</td>
+                          <td colspan="4">비말감염</td>
                       </tr>
                       <tr>
                           <th>주요증상</th>
-                          <td colspan="4" align='center'>발열 및 호흡기 증상 등</td>
+                          <td colspan="4">발열 및 호흡기 증상 등</td>
                       </tr>
                       <tr>
                           <th>치사율</th>
@@ -393,23 +410,23 @@
                       </tr>
                       <tr>
                           <th>기초감염재생산수</th>
-                          <td>1.1~1.7</td>
-                          <td>0.4~0.9</td>
-                          <td>2~5</td>
-                          <td>1.4~2.5</td>
+                          <td >1.1~1.7</td>
+                          <td >0.4~0.9</td>
+                          <td >2~5</td>
+                          <td >1.4~2.5</td>
                       </tr>
                       <tr>
                           <th>감염·사망자</th>
                           <td>집계되지 않음(18,449)</td>
                           <td>2,482(854)</td>
                           <td>8,096(774)</td>
-                          <td>24,524(492)</td>
+                          <td>17,378(362)</td>
                       </tr>
                       </tbody>
                   </table>
                   </div>
                   <p>
-                      ※20년 2월 5일 기준<br>
+                      ※20년 2월 3일 기준<br>
                       기초감염재생산수: 한 사람의 감염자가 몇 명을 전염시킬 수 있는지를 나타낸 값<br>
                       비말감염: 감염자의 침, 콧물 등 체액이 다른 사람의 입이나 코로 들어가 감염이 이루지는 것<br>
                       출처: 질병관리본부, 세계보건기구(WHO), 우측 상단상세에 링크참고
