--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
                 <a href="http://www.cdc.go.kr/linkCheck.es?mid=a21111050500" target="_blank">질병관리본부</a>,
                 <a href="http://news.kbs.co.kr/common/main.html" target="_blank">KBS</a>의 DATA 근거, 일일업데이트, <span class="text-update"></span> 최종 업데이트</span><br>
               <span class="h5">* GDG(google developers group) 등 자발적으로 참여해주신 분들께서 팀을 꾸려 비용을 받지 않고 업데이트 중에 있습니다. <a target="_blank" href="https://www.notion.so/5a68695448fc4724b8e1e070e919508d">&#8690;</a></span><br>
+              <span class="h5">* <a href="https://www.ncloud.com" target="_blank">네이버 클라우드 플랫폼</a>에서 서버 및 지도 API 를 무상 지원합니다.</span>
             </h1>
             <a href="http://www.xn--now-po7lf48dlsm0ya109f.kr/infect/occurrence_list.do" target="_blank" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i class="fas fa-download fa-sm text-white-50"></i> 리포트 바로가기</a>
           </div>
@@ -101,12 +102,15 @@
 
             <!-- 확진환자 -->
             <div class="col-xl-3 col-md-6 mb-4">
-              <div class="card border-left-danger shadow h-100 py-2">
+              <div class="card border-left-warning shadow h-100 py-2">
                 <div class="card-body">
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                       <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">확진환자(한국포함)</div>
                       <div class="h5 mb-0 font-weight-bold text-gray-800"><span id="확진자수"></span> 명</div>
+                      <br>
+                      <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">발생국가</div>
+                      <div class="h5 mb-0 font-weight-bold text-gray-800"><span id="발생국가수"></span> 개국</div>
                     </div>
                     <div class="col-auto">
                       <i class="fas fa-clipboard-list fa-2x text-gray-300"></i>
@@ -135,7 +139,7 @@
 
             <!-- Earnings (Monthly) Card Example -->
             <div class="col-xl-3 col-md-6 mb-4">
-              <div class="card border-left-danger shadow h-100 py-2">
+              <div class="card border-left-warning shadow h-100 py-2">
                 <div class="card-body">
                   <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">한국 확진자</div>
                     <h4 class="small font-weight-bold">한국(확진자 <span id="한국확진자"></span>명/사망자 0명)<span class="float-right">100%</span></h4>
@@ -152,12 +156,16 @@
 
             <!-- Pending Requests Card Example -->
             <div class="col-xl-3 col-md-6 mb-4">
-              <div class="card border-left-warning shadow h-100 py-2">
+              <div class="card border-left-success shadow h-100 py-2">
                 <div class="card-body">
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
-                      <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">발생국가</div>
-                      <div class="h5 mb-0 font-weight-bold text-gray-800"><span id="발생국가수"></span> 개국</div>
+                      <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">한국 완치자</div>
+                      <!-- 완치자(세계 완치자도 포함) -->
+                      <h4 class="small font-weight-bold">한국(완치자 <span id="한국완치자_인원"></span>명/확진자 19명)<span class="float-right"><span id="한국완치자_확률"></span>%</span></h4>
+                      <div class="progress mb-4">
+                        <div class="progress-bar bg-success" id="완치자확률바" role="progressbar" style="width: 0%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                      </div>
                     </div>
                     <div class="col-auto">
                       <i class="fas fa-clipboard-list fa-2x text-gray-300"></i>
@@ -231,7 +239,7 @@
               <div class="card shadow mb-4">
                 <!-- Card Header - Dropdown -->
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                  <h6 class="m-0 font-weight-bold text-danger">최근 3개월 중국관광객 <br>제주도 입도 현황</h6>
+                  <h6 class="m-0 font-weight-bold text-danger">중국관광객 제주 입도 현황(2월 4일 무사증 중단)</h6>
                   <div class="dropdown no-arrow">
                     <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
@@ -289,7 +297,7 @@
               <div class="card shadow mb-12">
                 <!-- Card Header - Dropdown -->
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                  <h6 class="m-0 font-weight-bold text-danger">안전수칙 및 제주정보</h6>
+                  <h6 class="m-0 font-weight-bold text-danger">안전수칙</h6>
                   <div class="dropdown no-arrow">
                     <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
@@ -325,24 +333,7 @@
                     </p>
                   <a href="http://www.cdc.go.kr/contents.es?mid=a21111060000">질병관리본부 안전수칙</a><br>
                   <a href="https://www.cdc.go.kr/linkCheck.es?mid=a21111050600">신종코로나바이러스 선별진료소</a><br>
-                  <a href="https://m.map.kakao.com/actions/searchView?q=%EC%84%A0%EB%B3%84%EC%A7%84%EB%A3%8C%EC%86%8C%20%EC%A0%9C%EC%A3%BC&wxEnc=LVSOTP&wyEnc=QNLTTMN&lvl=4&fbclid=IwAR0GcU5v4DY3GGkgbrDINlXiHccJzGALItiy1-JUqh7CVecjqKMXbjThqJY">신종코로나바이러스 제주지역 선별진료소(카카오맵 연동)</a><br><br>
-                  <span class="h5">제주 최신 정보</span>
-                  <img class="img-fluid" src="jeju_info.png" alt="">
-                  <p>유동인구 / 중국인 확진자 이동경로(출처 : 제주도청)</p>
-                  <p>
-                    1. 21일 제주공항 입국 근처<br>
-                    2. 21일 호텔에서 숙박<br>
-                    3. 22일 삼굼부리<br>
-                    4. 22일 우도<br>
-                    5. 22일 성산일출봉<br>
-                    6. 23일 신라면세점<br>
-                    7. 23일 롯데면세점, 쇼핑거리<br>
-                    8. 23일 칠성통 방문<br>
-                    9. 24일 1100고지<br>
-                    10. 24일 도두동 무지개 해안도로 방문<br>
-                    11. 24일 누웨마루 거리<br>
-                    12. 25일 제주공항<br>
-                  </p>
+                  <a href="https://m.map.kakao.com/actions/searchView?q=%EC%84%A0%EB%B3%84%EC%A7%84%EB%A3%8C%EC%86%8C%20%EC%A0%9C%EC%A3%BC&wxEnc=LVSOTP&wyEnc=QNLTTMN&lvl=4&fbclid=IwAR0GcU5v4DY3GGkgbrDINlXiHccJzGALItiy1-JUqh7CVecjqKMXbjThqJY">신종코로나바이러스 제주지역 선별진료소(카카오맵 연동)</a>
                 </div>
               </div>
             </div>
@@ -431,6 +422,68 @@
                       비말감염: 감염자의 침, 콧물 등 체액이 다른 사람의 입이나 코로 들어가 감염이 이루지는 것<br>
                       출처: 질병관리본부, 세계보건기구(WHO), 우측 상단상세에 링크참고
                   </p>
+                </div>
+              </div>
+            </div>
+
+          </div>
+          <br>
+
+          <!-- 제주 최신 정보 -->
+          <div class="row">
+
+            <!-- 제주 최신 정보(최근 중국인 이동 경로) -->
+            <div class="col-xl-5 col-lg-5">
+              <div class="card shadow mb-12">
+                <!-- Card Header - Dropdown -->
+                <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                  <h6 class="m-0 font-weight-bold text-danger">중국인 확진자 이동경로</h6>
+                  <div class="dropdown no-arrow">
+                    <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink">
+                      <div class="dropdown-header">상세</div>
+                      <a class="dropdown-item" href="http://www.cdc.go.kr/contents.es?mid=a21111060000">상세내용</a>
+                    </div>
+                  </div>
+                </div>
+                <!-- Card Body -->
+                <div class="card-body">
+                  <img class="img-fluid" src="jeju_info.png" alt="">
+                  <p>유동인구 / 중국인 확진자 이동경로(출처 : 제주도청)</p>
+                  <p>
+                    21일 : 제주공항 입국 근처, 21일 호텔에서 숙박<br>
+                    22일 : 삼굼부리, 우도, 성산일출봉<br>
+                    23일 : 신라면세점, 롯데면세점, 쇼핑거리, 칠성통 방문<br>
+                    24일 : 1100고지, 도두동 무지개 해안도로, 누웨마루 거리<br>
+                    25일 : 제주공항<br>
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <!-- 중국인 일일 입도 현황 -->
+            <div class="col-xl-7 col-lg-7">
+              <div class="card shadow mb-12">
+                <!-- Card Header - Dropdown -->
+                <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                  <h6 class="m-0 font-weight-bold text-danger">일일 입도현황(제주도청 제공)</h6>
+                  <div class="dropdown no-arrow">
+                    <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink">
+                      <div class="dropdown-header">상세</div>
+                      <a class="dropdown-item" href="#">상세 내용</a>
+                    </div>
+                  </div>
+                </div>
+                <!-- Card Body -->
+                <div class="card-body">
+                  <div class="chart-area">
+                    <canvas id="myAreaChart_three"></canvas>
+                  </div>
                 </div>
               </div>
             </div>
@@ -850,6 +903,10 @@
 
       if (data[variable]["Name"]=="한국") {
         document.getElementById("한국확진자").innerHTML = data[variable]["확진자수"];
+        document.getElementById("한국완치자_인원").innerHTML = data[variable]["완치자"];
+        let 완치자확율값 = ((data[variable]["완치자"]/data[variable]["확진자수"])*100).toFixed(3)
+        document.getElementById("한국완치자_확률").innerHTML = 완치자확율값;
+        document.getElementById("완치자확률바").style.width = 완치자확율값+"%";
       }
       확진자수 += data[variable]["확진자수"];
       사망자수 += data[variable]["사망자수"];
@@ -858,23 +915,6 @@
     document.getElementById("확진자수").innerHTML = Number(확진자수).toLocaleString();
     document.getElementById("사망자수").innerHTML = Number(사망자수).toLocaleString();
 
-
-
-    // //선별진료소 마킹
-    // var data2 = 제주지역선별진료소;
-    // for (var i in data2) {
-    //   console.log(data2);
-    //   var marker2 = new google.maps.Marker({
-    //     position: {lat: Number(data2[i]["lat"]), lng: Number(data2[i]["lng"])},
-    //     map: map
-    //   });
-    //   var infowindow2 = new google.maps.InfoWindow({
-    //     content: `이름 : ${data2[i]["이름"]}<br>
-    //     주소 : ${data2[i]["주소"]}<br>
-    //     전화번호 : ${data2[i]["전화번호"]}`
-    //   });
-    //   infowindow2.open(map, marker2);
-    // }
 </script>
 
 
