success color mod

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 <div class="card-body">
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
-                      <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">한국 완치자</div>
+                      <div class="text-xs font-weight-bold text-success text-uppercase mb-1">한국 완치자</div>
                       <!-- 완치자(세계 완치자도 포함) -->
                       <h4 class="small font-weight-bold">한국(완치자 <span id="한국완치자_인원"></span>명/확진자 19명)<span class="float-right"><span id="한국완치자_확률"></span>%</span></h4>
                       <div class="progress mb-4">
