--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="author" content="">
 
   <title>코로나 맵</title>
-
+  <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=26ba2oaskk"></script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157131634-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
