--- a/test.html
+++ b/test.html
@@ -10,7 +10,7 @@
   <meta name="author" content="">
 
   <title>코로나 맵</title>
-  <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=26ba2oaskk"></script>
+  <!-- <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=26ba2oaskk"></script> -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157131634-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -557,7 +557,7 @@
                 <!-- Card Body -->
                 <div class="card-body">
                   마커를 클릭하면 자세한 진료소의 정보를 확인할 수 있습니다.
-                  <div id="map" style="width:100%;height:400px;"></div>
+                  <!-- <div id="map" style="width:100%;height:400px;"></div> -->
                 </div>
               </div>
             </div>
@@ -1026,7 +1026,7 @@
   <script src="js/demo/datatables-demo.js"></script>
 
   <!-- 제주 진료소 관련 스크립트 -->
-  <script src="js/jejuMedicalCenter.js"></script>
+  <!-- <script src="js/jejuMedicalCenter.js"></script> -->
 
   <!-- 월드맵 관련 스크립트  -->
   <script src="js/worldmap.js"></script>
