Move jeju_info.png

--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
                 </div>
                 <!-- Card Body -->
                 <div class="card-body">
-                  <img class="img-fluid" src="jeju_info.png" alt="">
+                  <img class="img-fluid" src="img/jeju_info.png" alt="">
                   <p>유동인구 / 중국인 확진자 이동경로(출처 : 제주도청)</p>
                   <p>
                     21일 : 제주공항 입국 근처, 21일 호텔에서 숙박<br>
