도청 요청으로 중국인 확진 판정자에 문구 수정

--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
               <div class="card shadow mb-12">
                 <!-- Card Header - Dropdown -->
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                  <h6 class="m-0 font-weight-bold text-danger">중국인 확진자 이동경로</h6>
+                  <h6 class="m-0 font-weight-bold text-danger">중국 귀국후 확진판정자 이동경로</h6>
                   <div class="dropdown no-arrow">
                     <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
                       aria-haspopup="true" aria-expanded="false">
@@ -499,9 +499,9 @@
                 <!-- Card Body -->
                 <div class="card-body">
                   <img class="img-fluid" src="img/jeju_info.png" alt="">
-                  <p>유동인구 / 중국인 확진자 이동경로(출처 : 제주도청)</p>
+                  <p>유동인구 / 중국 귀국후 확진판정자 이동경로(출처 : 제주도청)</p>
                   <p>
-                    21일 : 제주공항 입국 근처, 21일 호텔에서 숙박<br>
+                    21일 : 제주공항 입국 근처, 호텔에서 숙박<br>
                     22일 : 삼굼부리, 우도, 성산일출봉<br>
                     23일 : 신라면세점, 롯데면세점, 쇼핑거리, 칠성통 방문<br>
                     24일 : 1100고지, 도두동 무지개 해안도로, 누웨마루 거리<br>
