일일 입도객 현황 추가

--- a/index.html
+++ b/index.html
@@ -532,6 +532,7 @@
                 <!-- Card Body -->
                 <div class="card-body">
                   <div class="chart-area">
+                    <p>* 19년 일별 <a href="http://www.visitjeju.or.kr/web/bbs/bbsList.do?bbsId=TOURSTAT">중국인 입도객</a> (평균) : 2957명/일</p>
                     <canvas id="myAreaChart_three"></canvas>
                   </div>
                 </div>
