도청에서 데이터 제공하고 있다는 문구 추가

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <h1 style="margin-top:1em;" class="h2 mb-0 text-gray-800">신종 코로나 바이러스 맵<br>
               <span class="h5">*
                 <a href="http://www.cdc.go.kr/linkCheck.es?mid=a21111050500" target="_blank">질병관리본부</a>,
-                <a href="http://news.kbs.co.kr/common/main.html" target="_blank">KBS</a>의 DATA 근거, 일일업데이트, <span
+                <a href="http://news.kbs.co.kr/common/main.html" target="_blank">KBS</a>, 제주도청의 DATA 근거, 일일업데이트, <span
                   class="text-update"></span> 최종 업데이트</span><br>
               <span class="h5">* GDG(google developers group) 등 자발적으로 참여해주신 분들께서 팀을 꾸려 비용을 받지 않고 업데이트 중에 있습니다. <a
                   target="_blank" href="https://www.notion.so/5a68695448fc4724b8e1e070e919508d">&#8690;</a></span><br>
