--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <html lang="ko">
 
 <head>
+  <meta property="og:type" content="website">
+	<meta property="og:title" content="코로나 바이러스 현황판">
+	<meta name="description" content="코로나 바이러스 현황판">
+	<meta property="og:description" content="코로나 바이러스 현황판">
+	<meta property="og:image" content="https://livecorona.co.kr/livecorona.jpg">
+	<meta property="og:url" content="https://livecorona.co.kr">
 
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
 
   <title>코로나 맵</title>
   <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=26ba2oaskk"></script>
